/*
 * AI Interview Platform - Backend Application
 * Spring Boot 3.3 + Spring AI + Apache Tika
 */

plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = 'com.interview'
version = '0.0.1-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    
    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'
    
    // Spring AI - OpenAI兼容模式 (阿里云DashScope)
    implementation 'org.springframework.ai:spring-ai-starter-model-openai:1.1.2'    
    // Spring AI - PostgreSQL Vector Store (pgvector)
    implementation 'org.springframework.ai:spring-ai-starter-vector-store-pgvector:1.1.2'
    
    // Apache Tika for document parsing (PDF, DOCX, TXT)
    implementation libs.tika.core
    implementation libs.tika.parsers
    
    // AWS S3 SDK for RustFS storage
    implementation 'software.amazon.awssdk:s3:2.25.27'
    
    // PDF导出 - iText 7
    implementation 'com.itextpdf:itext7-core:7.2.5'
    implementation 'com.itextpdf:font-asian:7.2.5'
    
    // Lombok
    compileOnly libs.lombok
    annotationProcessor libs.lombok
    
    // MapStruct - 对象映射 (必须在Lombok之后配置)
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation libs.junit.jupiter
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
